[package]
name = "novum"
version = "0.1.1"
edition = "2021"
description = "novum"
license = "MIT"
repository = "https://github.com/sebastianoderland/novum"
exclude = ["src/main.rs"]

[dependencies]
cfg-if = "1.0.0"
# time = "0.3.37"
log = { version = "0.4.25", optional = true, features = ["std"] }
strfmt = "0.2.4"
serde = { version = "1.0.217", optional = true, features = ["derive"] }
serde_json = { version = "1.0.138", optional = true }
serde_yml = { version = "0.0.12", optional = true }
toml = { version = "0.8.20", optional = true }
paste = "1.0.15"
novum_proc_macros = { version = "0.1.1", path = "lib/novum_proc_macros" }

[features]
default = [
    "result",
    "logger",
    "marshall",
    "marshall-json",
    "marshall-yaml",
    "marshall-toml",
]
logger = ["dep:log"]
result = []
marshall = ["dep:serde"]
marshall-json = ["dep:serde_json"]
marshall-yaml = ["dep:serde_yml"]
marshall-toml = ["dep:toml"]
